# auto-eda

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: demo.py
src/auto_eda/: __init__.py  cli.py  io_utils.py  report.py  summary.py  visuals.py
