[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-eda"
version = "0.1.0"
description = "Simple, fast, and clear exploratory data analysis (EDA) CLI that works on CSV, Excel, Parquet, and JSON."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name"}]
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "plotly>=5.22.0",
    "scikit-learn>=1.5.0",
    "pyarrow>=15.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
]

[project.scripts]
auto-eda = "auto_eda.cli:app"